--- a/ErrorReporting/app/src/main/res/layout/activity_main.xml
+++ b/ErrorReporting/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="Visa skickade rapporter"
+        android:text="@string/ShowReports"
         android:id="@+id/Bdisplay"
         android:onClick="displayReport"
         android:background="#9ecbf9"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Vad är felet?"
+        android:text="@string/Problem"
         android:textSize="24sp"
         android:id="@+id/whatHappened"
         android:layout_below="@+id/Bdisplay"
@@ -39,7 +39,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Klicka här ▼"
+        android:text="@string/PressHere"
         android:id="@+id/symptom"
         android:width="320dp"
         android:height="70dp"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Hur illa är problemet?"
+        android:text="@string/Severity"
         android:textSize="24sp"
         android:id="@+id/howBad"
         android:layout_marginTop="50dp"
@@ -122,7 +122,7 @@
         android:layout_height="50dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
-        android:text="1"
+        android:text="@string/First"
         android:textSize="26sp"
         android:textColor="#000"
         android:id="@+id/firstStep"
@@ -136,7 +136,7 @@
         android:layout_height="50dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
-        android:text="2"
+        android:text="@string/Second"
         android:textSize="26sp"
         android:textColor="#000"
         android:id="@+id/secondStep"
@@ -150,7 +150,7 @@
         android:layout_height="50dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
-        android:text="3"
+        android:text="@string/Third"
         android:textSize="26sp"
         android:textColor="#000"
         android:id="@+id/thirdStep"
@@ -166,7 +166,7 @@
         android:padding="10dp"
         android:textColor="#000"
         android:background="@drawable/buttonn_grey"
-        android:text="SKICKA"
+        android:text="@string/Send"
         android:width="230dp"
         android:height="80dp"
         android:textSize="30sp"
