--- a/ErrorReporting/app/src/main/res/drawable/custom_button1.xml
+++ b/ErrorReporting/app/src/main/res/drawable/custom_button1.xml
@@ -2,20 +2,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false" android:state_selected="false">
         <shape android:shape="rectangle">
-            <gradient android:angle="-90" android:startColor="#ffee58" android:endColor="#ffd600"/>
+            <gradient android:angle="-90" android:startColor="#ffee58" android:endColor="@color/yellow"/>
             <padding android:left="15dp" android:top="2dp" android:right="15dp" android:bottom="2dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <gradient android:startColor="#ffee58" android:endColor="#ffd600"/>
+            <gradient android:startColor="#ffee58" android:endColor="@color/yellow"/>
             <stroke android:width="4dp" android:color="#757575"/>
             <padding android:left="15dp" android:top="2dp" android:right="15dp" android:bottom="2dp"/>
         </shape>
     </item>
     <item android:state_pressed="false" android:state_selected="true">
         <shape android:shape="rectangle">
-            <gradient android:startColor="#ffee58" android:endColor="#ffd600"/>
+            <gradient android:startColor="#ffee58" android:endColor="@color/yellow"/>
             <stroke android:width="4dp" android:color="#757575"/>
             <padding android:left="15dp" android:top="2dp" android:right="15dp" android:bottom="2dp"/>
         </shape>
