--- a/ErrorReporting/app/src/main/res/layout/activity_updatereport.xml
+++ b/ErrorReporting/app/src/main/res/layout/activity_updatereport.xml
@@ -33,7 +33,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Symptom"
+        android:text="@string/Symptom"
         android:id="@+id/symptombutton"
         android:width="260dp"
         android:height="80dp"
@@ -62,7 +62,7 @@
         android:scaleType="centerCrop"
         android:background="@drawable/custom_button4"
         android:onClick="setGrade"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="3dp"
         android:layout_centerHorizontal="true" />
