--- a/ErrorReporting/app/src/main/res/layout/testlist.xml
+++ b/ErrorReporting/app/src/main/res/layout/testlist.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tryck på gul felrapport för att komplettera."
+        android:text="@string/PressToComplete"
         android:id="@+id/textView" />
 
     <ListView
