--- a/BusServiceApp/app/src/main/res/layout/custom_list.xml
+++ b/BusServiceApp/app/src/main/res/layout/custom_list.xml
@@ -12,6 +12,6 @@
         android:maxLines="1"
         android:text="bus"
         android:textColor="@android:color/black"
-        android:textSize="18dip"
+        android:textSize="18sp"
         android:textStyle="bold" />
 </RelativeLayout>
