--- a/BusServiceApp/app/src/main/res/layout/custom_list_detailed.xml
+++ b/BusServiceApp/app/src/main/res/layout/custom_list_detailed.xml
@@ -12,7 +12,7 @@
         android:maxLines="1"
         android:text="description"
         android:textColor="@android:color/black"
-        android:textSize="18dip"
+        android:textSize="18sp"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/custom_list_data"
@@ -21,7 +21,7 @@
         android:maxLines="1"
         android:text="data"
         android:textColor="@android:color/black"
-        android:textSize="18dip"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
