--- a/BusServiceApp/app/src/main/res/layout/row.xml
+++ b/BusServiceApp/app/src/main/res/layout/row.xml
@@ -13,7 +13,7 @@
         android:maxLines="2"
         android:text="symptom"
         android:textColor="@android:color/black"
-        android:textSize="18dip"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:maxLines="1"
         android:text="grade"
         android:textColor="@android:color/black"
-        android:textSize="15dip"
+        android:textSize="15sp"
         android:textStyle="bold"/>
 
     <TextView
@@ -37,7 +37,7 @@
         android:maxLines="3"
         android:text="comment"
         android:textColor="@android:color/black"
-        android:textSize="13dip" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/errordate"
@@ -49,7 +49,7 @@
         android:maxLines="2"
         android:text="date"
         android:textColor="@android:color/black"
-        android:textSize="12dip"
+        android:textSize="12sp"
         android:textStyle="bold"/>
 
 </RelativeLayout>
